--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">SimpleTweets</string>
     <string name="login_label">Connect with Twitter</string>
     <string name="Twitter">Twitter</string>
+    <string name="Submit" />
+    <string name="hint">What\'s happening?</string>
 
 </resources>
